alignment fixed

--- a/src/css/Bylaws.css
+++ b/src/css/Bylaws.css
@@ -2,8 +2,12 @@
   .section-title{
       margin-top: -20px!important;
   }
+  .mobtbylaw{
+    font-size: 30px!important;
+  }
   .art{
     margin-top: 10px!important;
+    font-size: 30px!important;
   }
   .bbt {
     position: absolute;
