--- a/src/css/Reports.css
+++ b/src/css/Reports.css
@@ -49,7 +49,7 @@
       width: 100% !important;
     }
     .section{
-      padding-top: 70px;
+      padding-top: 150px;
     }
   }
   
